# color_by_number

./: .gitignore  Generator.ipynb  README.md  example_demo.ipynb  pyproject.toml
_utils/: generator_utils.py  revealer_utils.py
color_by_number/: __init__.py  color_by_number.py  web_app.py
tests/: test_web_app.py
